--- a/PA_constrained_opt_student.ipynb
+++ b/PA_constrained_opt_student.ipynb
@@ -88,7 +88,6 @@
     "\n",
     "1. Write the function for the l1 norm projection oracle, l2 norm projection oracle and the respective PGD steps.\n",
     "\n",
-    "\n",
     "2. Plot f(w_t) vs t for the PGD algorithm with l2 norm projection oracle. The step size is fixed to eta=0.01. Repeat the plots with different l2 norm constraints: 0.1, 0.5, 1, 2, 5 (on the same plot). \n",
     "\n",
     "3. Plot f(w_t) vs t for the PGD algorithm with l1 norm projection oracle. The step size is fixed to eta=0.01. Repeat the plots with different l1 norm constraints: 0.1, 0.5, 1, 2, 5 (on the same plot).\n",
@@ -319,10 +318,10 @@
     "    pass\n",
     "    \n",
     "    \n",
-    "def FW_step_l2(w, l2_norm):\n",
+    "def FW_step_l2(w, l2_norm, gamma):\n",
     "    pass    \n",
     "\n",
-    "def FW_step_l1(w, l1_norm):\n",
+    "def FW_step_l1(w, l1_norm, gamma):\n",
     "    pass\n",
     "\n"
    ]
@@ -345,7 +344,7 @@
     "    w=np.zeros(data_dim)\n",
     "\n",
     "    for t in range(100):\n",
-    "        w = FW_step_l2(w, norm_constraint)\n",
+    "        w = FW_step_l2(w, norm_constraint, gamma=2./(t+2)\n",
     "        f_vals.append(get_value(w))\n",
     "    f_vals_all.append(f_vals)\n",
     "plt.plot(range(100),np.array(f_vals_all).T)\n",
@@ -374,7 +373,7 @@
     "    f_vals=[]\n",
     "    w=np.zeros(data_dim)\n",
     "    for t in range(100):\n",
-    "        w = FW_step_l1(w, norm_constraint)\n",
+    "        w = FW_step_l1(w, norm_constraint, gamma=2./(t+2))\n",
     "        f_vals.append(get_value(w))\n",
     "    f_vals_all.append(f_vals)\n",
     "plt.plot(range(100),np.array(f_vals_all).T)\n",
@@ -401,7 +400,7 @@
     "for norm_constraint in norm_constraint_vals:\n",
     "    w=np.zeros(data_dim)\n",
     "    for t in range(100):\n",
-    "        w = FW_step_l2(w, norm_constraint)\n",
+    "        w = FW_step_l2(w, norm_constraint, gamma=2./(t+2)\n",
     "    loss_values.append(get_value(w))\n",
     "\n",
     "    # One measure of deviation is to check the non-zero components that are \n",
@@ -441,7 +440,7 @@
     "for norm_constraint in norm_constraint_vals:\n",
     "    w=np.zeros(data_dim)\n",
     "    for t in range(100):\n",
-    "        w = FW_step_l1(w, norm_constraint)\n",
+    "        w = FW_step_l1(w, norm_constraint, gamma=2./(t+2)\n",
     "    loss_values.append(get_value(w))\n",
     "    \n",
     "    # One measure of deviation is to check the non-zero components that are \n",
@@ -474,9 +473,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "py36notebook",
    "language": "python",
-   "name": "python3"
+   "name": "py36notebook"
   },
   "language_info": {
    "codemirror_mode": {
@@ -488,7 +487,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
