Add projection oracles

--- a/PA_constrained_opt_student.ipynb
+++ b/PA_constrained_opt_student.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -14,11 +12,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "w_star= [ 0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          1.1530358   0.          0.\n",
+      "  0.         -1.74976547  0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.3426804   0.          0.\n",
+      "  0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.        ]\n",
+      "Non-zero coeffs= (array([21, 25, 51]),)\n",
+      "Smoothness coeff= 1.9432632682679574\n"
+     ]
+    }
+   ],
    "source": [
     "# Secret data generating mechanism that as the optimisation engineer you don't have access to. \n",
     "# However, to evaluate the final solution beyond the training objective \n",
@@ -42,7 +64,6 @@
     "labels = np.dot(data_matrix, w_star) + 0.0*np.random.randn(num_data)\n",
     "\n",
     "\n",
-    "\n",
     "global_A = np.dot(data_matrix.T, data_matrix) / num_data\n",
     "global_b = np.dot(data_matrix.T,labels) / num_data\n",
     "global_c = 0.5* np.dot(labels, labels) / num_data\n",
@@ -53,15 +74,14 @@
     "eig_vals, eig_vecs = np.linalg.eig(global_A)\n",
     "smoothness_coeff = np.real(np.max(eig_vals))\n",
     "print('Smoothness coeff=', smoothness_coeff)\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -107,21 +127,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Question 1 part 1\n",
     "\n",
     "def projection_oracle_l2(w, l2_norm):\n",
-    "    pass\n",
+    "    \"\"\"Projects a given vector onto a ball (as defined by l2_norm) of given radius around the origin\n",
+    "    \n",
+    "    Args:\n",
+    "        w (ndarray): given vector to be projected \n",
+    "        l2_norm (ndarray): radius of the l2_norm ball\n",
+    "    \n",
+    "    Returns:\n",
+    "        w_projected (ndarray): projected vector\n",
+    "    \"\"\"\n",
+    "    norm_w = np.sqrt(np.dot(w,w))\n",
+    "    if norm_w <= l2_norm:\n",
+    "        w_projected = w\n",
+    "        \n",
+    "    else:\n",
+    "        w_hat = w/norm_w\n",
+    "        w_projected = w_hat*l2_norm\n",
+    "    \n",
+    "    return w_projected\n",
+    "\n",
+    "def compute_l1_norm(x):\n",
+    "    \"\"\"Function to compute the l1 norm of a given vector\n",
+    "    \n",
+    "    Args:\n",
+    "        x (ndarray): vector whose l1 norm is to be computed\n",
+    "    \n",
+    "    Returns:\n",
+    "        l1_norm (float): l1 norm of the given vector\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    x = np.array(x)\n",
+    "    l1_norm = np.sum(np.abs(x))\n",
+    "    \n",
+    "    return l1_norm\n",
+    "\n",
+    "def vector_plus(x):\n",
+    "    \"\"\"Function to retain positive values of a vector and set negative values to 0\n",
+    "    \n",
+    "    Args:\n",
+    "        x (ndarray): input vector\n",
+    "    \n",
+    "    Returns:\n",
+    "        x_plus (ndarray): output vector\n",
+    "    \"\"\"\n",
+    "    x = np.array(x)\n",
+    "    mask = x>0\n",
+    "    x_plus = x*mask\n",
+    "    \n",
+    "    return x_plus\n",
+    "\n",
     "\n",
     "def projection_oracle_l1(w, l1_norm):\n",
-    "    pass\n",
+    "    \"\"\"Projects a given vector onto a ball (as defined by l1_norm) of given radius around the origin\n",
     "    \n",
+    "    Args:\n",
+    "        w (ndarray): given vector to be projected \n",
+    "        l1_norm (ndarray): radius of the l1_norm ball about the origin\n",
     "    \n",
+    "    Returns:\n",
+    "        w_projected (ndarray): projected vector\n",
+    "    \"\"\"\n",
+    "    w = np.array(w)\n",
+    "    w_sign = 2*(w>0) - 1\n",
+    "    w_pos = np.abs(w)\n",
+    "    w_norm = compute_l1_norm(w)\n",
+    "    \n",
+    "    if w_norm <= l1_norm:\n",
+    "        w_projected = w\n",
+    "    else:\n",
+    "        # tolerance value in projection\n",
+    "        epsilon = 10**(-5)\n",
+    "        # original vector is outside l1 ball\n",
+    "        tau_low = 0\n",
+    "        \n",
+    "        # finding a tau high that pushes given vector into l1 ball\n",
+    "        tau_high = 1\n",
+    "        one_vector = np.ones(len(w))\n",
+    "        forced_vector = vector_plus(w_pos - tau_high*one_vector)\n",
+    "        while compute_l1_norm(forced_vector) > l1_norm:\n",
+    "            tau_high = 2*tau_high\n",
+    "            forced_vector = vector_plus(w_pos - tau_high*one_vector)\n",
+    "            \n",
+    "        tau = (tau_high + tau_low)/2\n",
+    "        w_projected = w_sign*vector_plus(w_pos - tau*one_vector) \n",
+    "        norm_w_projected= compute_l1_norm(w_projected)\n",
+    "        \n",
+    "        while np.abs(norm_w_projected - l1_norm) > epsilon:\n",
+    "            # \"projection\" too far in, gotta reduce tau\n",
+    "            if norm_w_projected < l1_norm:\n",
+    "                tau_high = tau\n",
+    "            elif norm_w_projected > l1_norm:\n",
+    "                tau_low = tau\n",
+    "            tau = (tau_high + tau_low)/2\n",
+    "            w_projected = w_sign*(vector_plus(w_pos - tau*one_vector))\n",
+    "            norm_w_projected = compute_l1_norm(w_projected)\n",
+    "    \n",
+    "    return w_projected\n",
+    "\n",
     "def PGD_step_l2(w, l2_norm, eta=0.1):\n",
     "    pass\n",
     "\n",
@@ -473,9 +582,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py36notebook",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py36notebook"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -487,7 +596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
