--- a/PA_constrained_opt_student.ipynb
+++ b/PA_constrained_opt_student.ipynb
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
    "source": [
     "### Question 1 Part 5:\n",
     "\n",
-    "**Note**: An implementation deatail is that the same vector w_star is produced for every run of the notebook as the numpy random seed is set to a fixed value. Therefore, all analysis is presented for the w_star with\n",
+    "**Note**: An implementation detail is that the same vector w_star is produced for every run of the notebook as the numpy random seed is set to a fixed value. Therefore, all analysis is presented for the w_star with\n",
     "\n",
     "- l1_norm(w*) = 3.24\n",
     "- l2_norm(w*) = 2.12\n",
@@ -623,8 +623,8 @@
     "\n",
     "- The iterate and consequently the funciton value change very little for an l2 norm ball constraint of 0.1. However for radii of 0.5, 1, 2 and 5, the function value decreases for a few iterations and remains constant later on.\n",
     "- For L2 norm radius of 1,2 and 5 the solution converges to nearly the same point which is not equal to w_star. \n",
-    "- In the first case, when radius = 0.1, the behaviour of PGD indicates that the chosen constraint is too small to make any progress. At every iteration, PGD is pushing $x_t$ out of the L2 norm ball which is then being projected back onto the same position leading to $x_t$ and $f(x_t)$ being nearly the same for every iteration. When the radius is 0.5, the algorithm makes some progress before the same process repeats. This can be numerically verified. Computation of the gradient after 100 iterations reveals that it is still non-zero (*code commented out in the cell*) indicating that the function can still be decreased. Further for raidius = 0.1, 0.5 and 1, the solutions are all on the boundary.\n",
-    "- In the case of radius = 2,5 the algorithm converges to a point inside the L2 norm ball after a 100 iterations which is not equal to w*. However, the evaluation of the gradient at this point reveals that it is quite close to zero $\\left( \\approx 10^{-3} \\right)$. This indicates that the functions is converging to some local optimum and not necessarily w_star. \n",
+    "- In the first case, when radius = 0.1, the behaviour of PGD indicates that the chosen constraint is too small to make any progress. At every iteration, PGD is pushing $x_t$ out of the L2 norm ball which is then being projected back onto the same position leading to $x_t$ and $f(x_t)$ being nearly the same for every iteration. When the radius is 0.5, the algorithm makes some progress before the same process repeats. This can be numerically verified. Computation of the gradient after 100 iterations reveals that it is still non-zero (*code commented out in the cell*) indicating that the function can still be decreased. Further for radius = 0.1, 0.5 and 1, the solutions are all on the boundary.\n",
+    "- In the case of radius = 2,5 the algorithm converges to a point inside the L2 norm ball after a 100 iterations which is not equal to w*. However, the evaluation of the gradient at this point reveals that it is quite close to zero $\\left( \\approx 10^{-3} \\right)$. This indicates that the function is converging to some local optimum and not necessarily w_star. \n",
     "\n",
     "Why is this possible? Consider the problem statement.\n",
     "\n",
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1038,12 +1038,12 @@
    "source": [
     "### Question 2 part 5\n",
     "\n",
-    "- For the L2 norm ball, the LMO is implemented by finding that vector whose norm equals the radius of the ball and which is opposite to the direction of the gradient vector at x_t i.e \n",
+    "- For the L2 norm ball, the LMO is implemented by finding that vector whose norm equals the radius of the ball and which is opposite to the direction of the gradient vector at $x_t$ i.e \n",
     "\\begin{equation}\n",
     "LMO(u,l2\\_norm) = l2\\_norm*\\frac{-u}{||u||}\n",
     "\\end{equation}\n",
     "\n",
-    "- For FW (Frank-Wolfe) with L2 norm ball loss approaches 0 for l2 norm ball radii of 1,2,5. Loss reaches a non-zero near constant value in 20 iterations for smaller radii. This is again because the radius is not large enough to include a region in which the algorithm can find an optimum value. \n",
+    "- For FW (Frank-Wolfe) with L2 norm ball, loss approaches 0 for l2 norm ball radii of 1,2,5. Loss reaches a non-zero near constant value in 20 iterations for smaller radii. This is again because the radius is not large enough to include a region in which the algorithm can find an optimum value. \n",
     "\n",
     "- The results of part 2 reveal that there are \"oscillations\" in the loss value for the L2 norm constraints of 2 and 5. This shows that Frank Wolfe is not a descent algorithm i.e the function value is not guaranteed to decrease at every iteration.\n",
     "\n",
